--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,15 @@
-<h4>Feature List</h4>
+<div class="row">
+  <div class="col-md-6"><h4>Feature List</h4></div>
+  <div class="col-md-6"><a class="btn btn-md btn-primary pull-right" ui-sref="edit-feature">Create New</a></div>
+</div>
 
 <ul>
-  <li ng-repeat="feature in features">
+  <li ng-repeat="feature in features" style="margin-top: 25px;">
     {{feature._source.name}}
+
+    <a class="btn btn-sm btn-danger  pull-right" ng-href="" ng-click="deleteFeature(feature)">Delete</a>
+    <a class="btn btn-sm btn-primary pull-right" ui-sref="edit-feature({activeFeature: feature})">Edit</a>
+
     <ul>
       <li>Template Language: {{feature._source.feature.template_language}}</li>
       <li>Template: <pre>{{feature._source.feature.template}}</pre></li>
